# web-gpu-exercises

./: Cargo.toml  README.md
exercise2/: README.md
exercise2/src/: app.rs
exercise3/: README.md
exercise3/src/: main.rs  shader.wgsl  state.rs
exercise4/: README.md
exercise4/src/: main.rs  shader.wgsl  state.rs  user_input.rs
exercise5/: Cargo.toml  README.md
exercise5/src/: main.rs  shader.wgsl  state.rs  user_input.rs
exercise6/src/: state.rs
exercise7/: Cargo.toml  README.md
exercise7/src/: main.rs  state.rs
learn_wgpu/beginner/: README.md
learn_wgpu/beginner/ex1_dependencies_and_the_window/: Cargo.toml  README.md
learn_wgpu/beginner/ex2_the_surface/: Cargo.toml  README.md
learn_wgpu/beginner/ex2_the_surface_challenge/: Cargo.toml  README.md
learn_wgpu/beginner/ex3_the_pipeline/: Cargo.toml  README.md
learn_wgpu/beginner/ex5_textures_and_bind_groups/: Cargo.toml  README.md
learn_wgpu/beginner/ex5_textures_and_bind_groups/src/: app.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
learn_wgpu/beginner/exercise7_instancing/: Cargo.toml
learn_wgpu/beginner/exercise7_instancing/src/: camera.rs  instance.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/: main.rs
src/utils/: list_gpus.rs  mod.rs
wgpu_programming_in_rust_with_dr_wu/exercise1/: Cargo.toml  README.md
wgpu_programming_in_rust_with_dr_wu/exercise2/: Cargo.toml
wgpu_programming_in_rust_with_dr_wu/exercise3/: Cargo.toml
wgpu_programming_in_rust_with_dr_wu/exercise4/: Cargo.toml
wgpu_programming_in_rust_with_dr_wu/exercise6/: Cargo.toml  README.md
(+104 files in other folders)
