[package]
name = "ex5_textures_and_bind_groups"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.99"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "26"
pollster = "0.4"
bytemuck = "1.23"

# Use image crate to load our Happy Tree image
# The jpeg decoder that image includes uses rayon (opens new window)to speed up the decoding with threads
[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]